packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_projected_page_index_tree_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/repo_intelligence.rs
expression: value
---
{
  "repo_id": "projection-sample",
  "tree": {
    "doc_id": "reference/solve-41db401ae519",
    "page_id": "repo:projection-sample:projection:reference:doc:repo:projection-sample:doc:src/ProjectionPkg.jl#symbol:solve",
    "path": "reference/solve-41db401ae519.md",
    "repo_id": "projection-sample",
    "root_count": 2,
    "roots": [
      {
        "children": [],
        "is_thinned": false,
        "level": 1,
        "line_range": [
          1,
          7
        ],
        "node_id": "reference/solve-41db401ae519#solve",
        "structural_path": [
          "solve"
        ],
        "text": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: julia_docstring\n:END:",
        "title": "solve",
        "token_count": 8
      },
      {
        "children": [
          {
            "children": [],
            "is_thinned": false,
            "level": 2,
            "line_range": [
              18,
              24
            ],
            "node_id": "reference/solve-41db401ae519#anchors",
            "structural_path": [
              "Overview",
              "Anchors"
            ],
            "text": ":ID: anchors\n:PATHS: src/ProjectionPkg.jl\n\nSymbols:\n- `ProjectionPkg.solve` (src/ProjectionPkg.jl)",
            "title": "Anchors",
            "token_count": 8
          },
          {
            "children": [],
            "is_thinned": false,
            "level": 2,
            "line_range": [
              25,
              30
            ],
            "node_id": "reference/solve-41db401ae519#sources",
            "structural_path": [
              "Overview",
              "Documentation"
            ],
            "text": ":ID: sources\n:PATHS: src/ProjectionPkg.jl#symbol:solve\n\nDocumentation:\n- `solve` (src/ProjectionPkg.jl#symbol:solve)",
            "title": "Documentation",
            "token_count": 8
          }
        ],
        "is_thinned": false,
        "level": 1,
        "line_range": [
          8,
          17
        ],
        "node_id": "reference/solve-41db401ae519#overview",
        "structural_path": [
          "Overview"
        ],
        "text": ":ID: overview\n:PATHS: src/ProjectionPkg.jl#symbol:solve\n\nProjected reference page for `solve`.\nFormat hints:\n- `julia_docstring`\nSource paths:\n- `src/ProjectionPkg.jl#symbol:solve`",
        "title": "Overview",
        "token_count": 17
      }
    ],
    "title": "solve"
  }
}
