packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_projected_page_navigation_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/../support/repo_intelligence.rs
expression: value
---
{
  "center": {
    "kind": "page_index_node",
    "node": {
      "doc_id": "reference/projectionpkg-solve-ff4addb9b708",
      "line_range": [
        22,
        31
      ],
      "node_id": "reference/projectionpkg-solve-ff4addb9b708#anchors",
      "node_title": "Anchors",
      "page_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve",
      "page_kind": "reference",
      "page_title": "ProjectionPkg.solve",
      "path": "reference/projectionpkg-solve-ff4addb9b708.md",
      "repo_id": "projection-sample",
      "structural_path": [
        "Overview",
        "Anchors"
      ],
      "text": ":ID: anchors\n:PATHS: src/ProjectionPkg.jl\n\nModules:\n- `ProjectionPkg` (src/ProjectionPkg.jl)\n\nSymbols:\n- `ProjectionPkg.solve` (src/ProjectionPkg.jl)"
    },
    "page": {
      "doc_ids": [
        "repo:projection-sample:doc:src/ProjectionPkg.jl#symbol:solve",
        "repo:projection-sample:doc:docs/solve.md"
      ],
      "example_ids": [
        "repo:projection-sample:example:examples/solve_demo.jl"
      ],
      "format_hints": [
        "julia_docstring",
        "md"
      ],
      "kind": "reference",
      "module_ids": [
        "repo:projection-sample:module:ProjectionPkg"
      ],
      "page_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve",
      "paths": [
        "docs/solve.md",
        "examples/solve_demo.jl",
        "src/ProjectionPkg.jl",
        "src/ProjectionPkg.jl#symbol:solve"
      ],
      "repo_id": "projection-sample",
      "sections": [
        {
          "body": "Projected reference page for `ProjectionPkg.solve`.\nFormat hints:\n- `julia_docstring`\n- `md`\nSource paths:\n- `docs/solve.md`\n- `examples/solve_demo.jl`\n- `src/ProjectionPkg.jl`\n- `src/ProjectionPkg.jl#symbol:solve`",
          "level": 1,
          "paths": [
            "docs/solve.md",
            "examples/solve_demo.jl",
            "src/ProjectionPkg.jl",
            "src/ProjectionPkg.jl#symbol:solve"
          ],
          "section_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve#overview",
          "title": "Overview"
        },
        {
          "body": "Modules:\n- `ProjectionPkg` (src/ProjectionPkg.jl)\n\nSymbols:\n- `ProjectionPkg.solve` (src/ProjectionPkg.jl)",
          "level": 2,
          "paths": [
            "src/ProjectionPkg.jl"
          ],
          "section_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve#anchors",
          "title": "Anchors"
        },
        {
          "body": "Documentation:\n- `solve` (docs/solve.md)\n- `solve` (src/ProjectionPkg.jl#symbol:solve)",
          "level": 2,
          "paths": [
            "docs/solve.md",
            "src/ProjectionPkg.jl#symbol:solve"
          ],
          "section_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve#sources",
          "title": "Documentation"
        },
        {
          "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
          "level": 2,
          "paths": [
            "examples/solve_demo.jl"
          ],
          "section_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve#examples",
          "title": "Examples"
        }
      ],
      "symbol_ids": [
        "repo:projection-sample:symbol:ProjectionPkg.solve"
      ],
      "title": "ProjectionPkg.solve"
    }
  },
  "family_cluster": {
    "kind": "how_to",
    "pages": [
      {
        "page": {
          "doc_ids": [
            "repo:projection-sample:doc:README.md",
            "repo:projection-sample:doc:src/ProjectionPkg.jl#symbol:solve",
            "repo:projection-sample:doc:docs/solve.md"
          ],
          "example_ids": [
            "repo:projection-sample:example:examples/solve_demo.jl"
          ],
          "format_hints": [
            "julia_docstring",
            "md"
          ],
          "kind": "how_to",
          "module_ids": [
            "repo:projection-sample:module:ProjectionPkg"
          ],
          "page_id": "repo:projection-sample:projection:howto:example:repo:projection-sample:example:examples/solve_demo.jl",
          "paths": [
            "README.md",
            "docs/solve.md",
            "examples/solve_demo.jl",
            "src/ProjectionPkg.jl#symbol:solve"
          ],
          "repo_id": "projection-sample",
          "sections": [
            {
              "body": "Projected how-to page for `solve_demo`.\nFormat hints:\n- `julia_docstring`\n- `md`\nSource paths:\n- `README.md`\n- `docs/solve.md`\n- `examples/solve_demo.jl`\n- `src/ProjectionPkg.jl#symbol:solve`",
              "level": 1,
              "paths": [
                "README.md",
                "docs/solve.md",
                "examples/solve_demo.jl",
                "src/ProjectionPkg.jl#symbol:solve"
              ],
              "section_id": "repo:projection-sample:projection:howto:example:repo:projection-sample:example:examples/solve_demo.jl#overview",
              "title": "Overview"
            },
            {
              "body": "Modules:\n- `ProjectionPkg` (src/ProjectionPkg.jl)\n\nSymbols:\n- `ProjectionPkg.solve` (src/ProjectionPkg.jl)",
              "level": 2,
              "paths": [
                "src/ProjectionPkg.jl"
              ],
              "section_id": "repo:projection-sample:projection:howto:example:repo:projection-sample:example:examples/solve_demo.jl#anchors",
              "title": "Anchors"
            },
            {
              "body": "Documentation:\n- `README.md` (README.md)\n- `solve` (docs/solve.md)\n- `solve` (src/ProjectionPkg.jl#symbol:solve)",
              "level": 2,
              "paths": [
                "README.md",
                "docs/solve.md",
                "src/ProjectionPkg.jl#symbol:solve"
              ],
              "section_id": "repo:projection-sample:projection:howto:example:repo:projection-sample:example:examples/solve_demo.jl#sources",
              "title": "Supporting Docs"
            },
            {
              "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
              "level": 2,
              "paths": [
                "examples/solve_demo.jl"
              ],
              "section_id": "repo:projection-sample:projection:howto:example:repo:projection-sample:example:examples/solve_demo.jl#examples",
              "title": "Examples"
            }
          ],
          "symbol_ids": [
            "repo:projection-sample:symbol:ProjectionPkg.solve"
          ],
          "title": "solve_demo"
        },
        "shared_anchor_score": 5
      }
    ]
  },
  "node_context": {
    "ancestors": [
      {
        "doc_id": "reference/projectionpkg-solve-ff4addb9b708",
        "line_range": [
          8,
          21
        ],
        "node_id": "reference/projectionpkg-solve-ff4addb9b708#overview",
        "node_title": "Overview",
        "page_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve",
        "page_kind": "reference",
        "page_title": "ProjectionPkg.solve",
        "path": "reference/projectionpkg-solve-ff4addb9b708.md",
        "repo_id": "projection-sample",
        "structural_path": [
          "Overview"
        ],
        "text": ":ID: overview\n:PATHS: docs/solve.md, examples/solve_demo.jl, src/ProjectionPkg.jl, src/ProjectionPkg.jl#symbol:solve\n\nProjected reference page for `ProjectionPkg.solve`.\nFormat hints:\n- `julia_docstring`\n- `md`\nSource paths:\n- `docs/solve.md`\n- `examples/solve_demo.jl`\n- `src/ProjectionPkg.jl`\n- `src/ProjectionPkg.jl#symbol:solve`"
      }
    ],
    "children": [],
    "next_sibling": {
      "doc_id": "reference/projectionpkg-solve-ff4addb9b708",
      "line_range": [
        32,
        39
      ],
      "node_id": "reference/projectionpkg-solve-ff4addb9b708#sources",
      "node_title": "Documentation",
      "page_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve",
      "page_kind": "reference",
      "page_title": "ProjectionPkg.solve",
      "path": "reference/projectionpkg-solve-ff4addb9b708.md",
      "repo_id": "projection-sample",
      "structural_path": [
        "Overview",
        "Documentation"
      ],
      "text": ":ID: sources\n:PATHS: docs/solve.md, src/ProjectionPkg.jl#symbol:solve\n\nDocumentation:\n- `solve` (docs/solve.md)\n- `solve` (src/ProjectionPkg.jl#symbol:solve)"
    },
    "previous_sibling": null
  },
  "related_pages": [
    {
      "doc_ids": [
        "repo:projection-sample:doc:README.md",
        "repo:projection-sample:doc:src/ProjectionPkg.jl#symbol:solve",
        "repo:projection-sample:doc:docs/solve.md"
      ],
      "example_ids": [
        "repo:projection-sample:example:examples/solve_demo.jl"
      ],
      "format_hints": [
        "julia_docstring",
        "md"
      ],
      "kind": "how_to",
      "module_ids": [
        "repo:projection-sample:module:ProjectionPkg"
      ],
      "page_id": "repo:projection-sample:projection:howto:example:repo:projection-sample:example:examples/solve_demo.jl",
      "paths": [
        "README.md",
        "docs/solve.md",
        "examples/solve_demo.jl",
        "src/ProjectionPkg.jl#symbol:solve"
      ],
      "repo_id": "projection-sample",
      "sections": [
        {
          "body": "Projected how-to page for `solve_demo`.\nFormat hints:\n- `julia_docstring`\n- `md`\nSource paths:\n- `README.md`\n- `docs/solve.md`\n- `examples/solve_demo.jl`\n- `src/ProjectionPkg.jl#symbol:solve`",
          "level": 1,
          "paths": [
            "README.md",
            "docs/solve.md",
            "examples/solve_demo.jl",
            "src/ProjectionPkg.jl#symbol:solve"
          ],
          "section_id": "repo:projection-sample:projection:howto:example:repo:projection-sample:example:examples/solve_demo.jl#overview",
          "title": "Overview"
        },
        {
          "body": "Modules:\n- `ProjectionPkg` (src/ProjectionPkg.jl)\n\nSymbols:\n- `ProjectionPkg.solve` (src/ProjectionPkg.jl)",
          "level": 2,
          "paths": [
            "src/ProjectionPkg.jl"
          ],
          "section_id": "repo:projection-sample:projection:howto:example:repo:projection-sample:example:examples/solve_demo.jl#anchors",
          "title": "Anchors"
        },
        {
          "body": "Documentation:\n- `README.md` (README.md)\n- `solve` (docs/solve.md)\n- `solve` (src/ProjectionPkg.jl#symbol:solve)",
          "level": 2,
          "paths": [
            "README.md",
            "docs/solve.md",
            "src/ProjectionPkg.jl#symbol:solve"
          ],
          "section_id": "repo:projection-sample:projection:howto:example:repo:projection-sample:example:examples/solve_demo.jl#sources",
          "title": "Supporting Docs"
        },
        {
          "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
          "level": 2,
          "paths": [
            "examples/solve_demo.jl"
          ],
          "section_id": "repo:projection-sample:projection:howto:example:repo:projection-sample:example:examples/solve_demo.jl#examples",
          "title": "Examples"
        }
      ],
      "symbol_ids": [
        "repo:projection-sample:symbol:ProjectionPkg.solve"
      ],
      "title": "solve_demo"
    },
    {
      "doc_ids": [
        "repo:projection-sample:doc:README.md",
        "repo:projection-sample:doc:src/ProjectionPkg.jl#symbol:solve",
        "repo:projection-sample:doc:docs/solve.md"
      ],
      "example_ids": [
        "repo:projection-sample:example:examples/solve_demo.jl"
      ],
      "format_hints": [
        "julia_docstring",
        "md"
      ],
      "kind": "reference",
      "module_ids": [
        "repo:projection-sample:module:ProjectionPkg"
      ],
      "page_id": "repo:projection-sample:projection:reference:module:repo:projection-sample:module:ProjectionPkg",
      "paths": [
        "README.md",
        "docs/solve.md",
        "examples/solve_demo.jl",
        "src/ProjectionPkg.jl",
        "src/ProjectionPkg.jl#symbol:solve"
      ],
      "repo_id": "projection-sample",
      "sections": [
        {
          "body": "Projected reference page for `ProjectionPkg`.\nFormat hints:\n- `julia_docstring`\n- `md`\nSource paths:\n- `README.md`\n- `docs/solve.md`\n- `examples/solve_demo.jl`\n- `src/ProjectionPkg.jl`\n- `src/ProjectionPkg.jl#symbol:solve`",
          "level": 1,
          "paths": [
            "README.md",
            "docs/solve.md",
            "examples/solve_demo.jl",
            "src/ProjectionPkg.jl",
            "src/ProjectionPkg.jl#symbol:solve"
          ],
          "section_id": "repo:projection-sample:projection:reference:module:repo:projection-sample:module:ProjectionPkg#overview",
          "title": "Overview"
        },
        {
          "body": "Modules:\n- `ProjectionPkg` (src/ProjectionPkg.jl)",
          "level": 2,
          "paths": [
            "src/ProjectionPkg.jl"
          ],
          "section_id": "repo:projection-sample:projection:reference:module:repo:projection-sample:module:ProjectionPkg#anchors",
          "title": "Anchors"
        },
        {
          "body": "Documentation:\n- `README.md` (README.md)\n- `solve` (docs/solve.md)\n- `solve` (src/ProjectionPkg.jl#symbol:solve)",
          "level": 2,
          "paths": [
            "README.md",
            "docs/solve.md",
            "src/ProjectionPkg.jl#symbol:solve"
          ],
          "section_id": "repo:projection-sample:projection:reference:module:repo:projection-sample:module:ProjectionPkg#sources",
          "title": "Documentation"
        },
        {
          "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
          "level": 2,
          "paths": [
            "examples/solve_demo.jl"
          ],
          "section_id": "repo:projection-sample:projection:reference:module:repo:projection-sample:module:ProjectionPkg#examples",
          "title": "Examples"
        }
      ],
      "symbol_ids": [],
      "title": "ProjectionPkg"
    },
    {
      "doc_ids": [
        "repo:projection-sample:doc:docs/solve.md"
      ],
      "example_ids": [
        "repo:projection-sample:example:examples/solve_demo.jl"
      ],
      "format_hints": [
        "md"
      ],
      "kind": "reference",
      "module_ids": [],
      "page_id": "repo:projection-sample:projection:reference:doc:repo:projection-sample:doc:docs/solve.md",
      "paths": [
        "docs/solve.md",
        "examples/solve_demo.jl"
      ],
      "repo_id": "projection-sample",
      "sections": [
        {
          "body": "Projected reference page for `solve`.\nFormat hints:\n- `md`\nSource paths:\n- `docs/solve.md`\n- `examples/solve_demo.jl`",
          "level": 1,
          "paths": [
            "docs/solve.md",
            "examples/solve_demo.jl"
          ],
          "section_id": "repo:projection-sample:projection:reference:doc:repo:projection-sample:doc:docs/solve.md#overview",
          "title": "Overview"
        },
        {
          "body": "Symbols:\n- `ProjectionPkg.solve` (src/ProjectionPkg.jl)",
          "level": 2,
          "paths": [
            "src/ProjectionPkg.jl"
          ],
          "section_id": "repo:projection-sample:projection:reference:doc:repo:projection-sample:doc:docs/solve.md#anchors",
          "title": "Anchors"
        },
        {
          "body": "Documentation:\n- `solve` (docs/solve.md)",
          "level": 2,
          "paths": [
            "docs/solve.md"
          ],
          "section_id": "repo:projection-sample:projection:reference:doc:repo:projection-sample:doc:docs/solve.md#sources",
          "title": "Documentation"
        },
        {
          "body": "Examples:\n- `solve_demo` (examples/solve_demo.jl)",
          "level": 2,
          "paths": [
            "examples/solve_demo.jl"
          ],
          "section_id": "repo:projection-sample:projection:reference:doc:repo:projection-sample:doc:docs/solve.md#examples",
          "title": "Examples"
        }
      ],
      "symbol_ids": [
        "repo:projection-sample:symbol:ProjectionPkg.solve"
      ],
      "title": "solve"
    }
  ],
  "repo_id": "projection-sample",
  "tree": {
    "doc_id": "reference/projectionpkg-solve-ff4addb9b708",
    "page_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve",
    "path": "reference/projectionpkg-solve-ff4addb9b708.md",
    "repo_id": "projection-sample",
    "root_count": 2,
    "roots": [
      {
        "children": [],
        "is_thinned": false,
        "level": 1,
        "line_range": [
          1,
          7
        ],
        "node_id": "reference/projectionpkg-solve-ff4addb9b708#projectionpkg-solve",
        "structural_path": [
          "ProjectionPkg.solve"
        ],
        "text": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: julia_docstring, md\n:END:",
        "title": "ProjectionPkg.solve",
        "token_count": 9
      },
      {
        "children": [
          {
            "children": [],
            "is_thinned": false,
            "level": 2,
            "line_range": [
              22,
              31
            ],
            "node_id": "reference/projectionpkg-solve-ff4addb9b708#anchors",
            "structural_path": [
              "Overview",
              "Anchors"
            ],
            "text": ":ID: anchors\n:PATHS: src/ProjectionPkg.jl\n\nModules:\n- `ProjectionPkg` (src/ProjectionPkg.jl)\n\nSymbols:\n- `ProjectionPkg.solve` (src/ProjectionPkg.jl)",
            "title": "Anchors",
            "token_count": 12
          },
          {
            "children": [],
            "is_thinned": false,
            "level": 2,
            "line_range": [
              32,
              39
            ],
            "node_id": "reference/projectionpkg-solve-ff4addb9b708#sources",
            "structural_path": [
              "Overview",
              "Documentation"
            ],
            "text": ":ID: sources\n:PATHS: docs/solve.md, src/ProjectionPkg.jl#symbol:solve\n\nDocumentation:\n- `solve` (docs/solve.md)\n- `solve` (src/ProjectionPkg.jl#symbol:solve)",
            "title": "Documentation",
            "token_count": 12
          },
          {
            "children": [],
            "is_thinned": false,
            "level": 2,
            "line_range": [
              40,
              45
            ],
            "node_id": "reference/projectionpkg-solve-ff4addb9b708#examples",
            "structural_path": [
              "Overview",
              "Examples"
            ],
            "text": ":ID: examples\n:PATHS: examples/solve_demo.jl\n\nExamples:\n- `solve_demo` (examples/solve_demo.jl)",
            "title": "Examples",
            "token_count": 8
          }
        ],
        "is_thinned": false,
        "level": 1,
        "line_range": [
          8,
          21
        ],
        "node_id": "reference/projectionpkg-solve-ff4addb9b708#overview",
        "structural_path": [
          "Overview"
        ],
        "text": ":ID: overview\n:PATHS: docs/solve.md, examples/solve_demo.jl, src/ProjectionPkg.jl, src/ProjectionPkg.jl#symbol:solve\n\nProjected reference page for `ProjectionPkg.solve`.\nFormat hints:\n- `julia_docstring`\n- `md`\nSource paths:\n- `docs/solve.md`\n- `examples/solve_demo.jl`\n- `src/ProjectionPkg.jl`\n- `src/ProjectionPkg.jl#symbol:solve`",
        "title": "Overview",
        "token_count": 28
      }
    ],
    "title": "ProjectionPkg.solve"
  }
}
